--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="">
     <meta property="og:title" content="Neoplex Hosting: Premium Game Servers, Dedicated Servers, VPS & Domain Registration">
     <meta property="og:description" content="Experience unparalleled hosting with Vultric Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
-    <meta property="og:image" content="img/banner.png">
+    <meta property="og:image" content="img/">
     <meta property="og:image:alt" content="NeoFlex Hosting">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
