--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeoPlex Hosting | Premium Game Servers, Dedicated Servers, VPS & Domain Registration</title>
+    <title>Sky Blue Node Hosting | Free And Premium Game Servers, Dedicated Servers, VPS </title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="icon" type="image/svg+xml" href="img/logo.svg">
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="en-US">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:title" content="Neoplex Hosting: Premium Game Servers, Dedicated Servers, VPS & Domain Registration">
+    <meta property="og:title" content="Sky Blue Node Hosting: Premium Game Servers, Dedicated Servers, VPS">
     <meta property="og:description" content="Experience unparalleled hosting with Vultric Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
     <meta property="og:image" content="img/">
     <meta property="og:image:alt" content="NeoFlex Hosting">
@@ -30,10 +30,10 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="">
-    <meta name="twitter:title" content="Neoplex Hosting: Premium Game Servers, Dedicated Servers, VPS & Domain Registration">
-    <meta name="twitter:description" content="Experience unparalleled hosting with Neoplex Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
-    <meta name="twitter:image" content="img/banner.png">
-    <meta name="twitter:image:alt" content="Neoplex Hosting: Premium Game Servers, Dedicated Servers, VPS & Domain Registration">
+    <meta name="twitter:title" content="Sky Blue Node Hosting: Premium Game Servers, Dedicated Servers, VPS">
+    <meta name="twitter:description" content="Experience unparalleled hosting with Sky Blue Node Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
+    <meta name="twitter:image" content="img/">
+    <meta name="twitter:image:alt" content="Sky Blue Node Hosting: Premium Game Servers, Dedicated Servers, VPS">
 
     <!-- Boostrap v5.3 -->
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
@@ -98,6 +98,9 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"></li>
+                        <a class="nav-link" href="">Get Start For Free</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="games">Game Servers</a>
                     </li>
@@ -221,7 +224,7 @@
                     <ul class="list-unstyled">
                         <li>
                             <svg class="check" height="512" viewBox="0 0 520 520" width="512" xmlns="http://www.w3.org/2000/svg" fill="var(--velo-green)"><g id="Check-1" data-name="1-Check"><path d="m79.423 240.755a47.529 47.529 0 0 0 -36.737 77.522l120.73 147.894a43.136 43.136 0 0 0 36.066 16.009c14.654-.787 27.884-8.626 36.319-21.515l250.787-403.892c.041-.067.084-.134.128-.2 2.353-3.613 1.59-10.773-3.267-15.271a13.321 13.321 0 0 0 -19.362 1.343q-.135.166-.278.327l-252.922 285.764a10.961 10.961 0 0 1 -15.585.843l-83.94-76.386a47.319 47.319 0 0 0 -31.939-12.438z"/></g></svg>
-                            <span>3-Day Money Back Guarantee</span>
+                            <span>2-Day Money Back Guarantee</span>
                         </li>
                         <li>
                             <svg class="check" height="512" viewBox="0 0 520 520" width="512" xmlns="http://www.w3.org/2000/svg" fill="var(--velo-green)"><g id="Check-2" data-name="2-Check"><path d="m79.423 240.755a47.529 47.529 0 0 0 -36.737 77.522l120.73 147.894a43.136 43.136 0 0 0 36.066 16.009c14.654-.787 27.884-8.626 36.319-21.515l250.787-403.892c.041-.067.084-.134.128-.2 2.353-3.613 1.59-10.773-3.267-15.271a13.321 13.321 0 0 0 -19.362 1.343q-.135.166-.278.327l-252.922 285.764a10.961 10.961 0 0 1 -15.585.843l-83.94-76.386a47.319 47.319 0 0 0 -31.939-12.438z"/></g></svg>
@@ -549,8 +552,8 @@
                     <div class="col-lg-3 col-sm-6">
                         <h4>Social</h4>
                         <ul class="list-unstyled">
-                                <li><a href="https://discord.gg/6BBXAVXGNE">Discord</a></li>
-                                <li><a href="https://www.youtube.com/@NeoFlexHosting">Youtube</a></li>
+                                <li><a href="https://discord.gg/skybluenode">Discord</a></li>
+                                <li><a href="https://www.youtube.com/">Youtube</a></li>
                         </ul>
                     </div>
                 </div>
@@ -572,7 +575,7 @@
                         </div>
                                     </div>
             </div>
-            <p class="text-center text-white mb-0 copy">&copy; Copyright 2024 NeoPlex Hosting. All rights reserved.</p>
+            <p class="text-center text-white mb-0 copy">&copy; Copyright 2024 Sky Blue Node Hosting. All rights reserved.</p>
         </div>
                 <!-- End Payment Methods -->
     </div>
