--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Toolbar -->
     <nav class="navbar navbar-expand-md toolbar">
     <div class="container-fluid">
-        <p class="navbar-text py-1 mb-0"><img src="img/icons/discount.svg" class="img-fluid me-1" alt="Discount Icon"> Enjoy 5&percnt; off new services by using code <b id="promoCode"><span>NEWSTART5</span></b> for a limited time only 10 Days.</p>
+        <p class="navbar-text py-1 mb-0"><img src="img/icons/discount.svg" class="img-fluid me-1" alt="Discount Icon"> Enjoy 5&percnt; off new services by using code <b id="promoCode"><span>SBN5</span></b> for a limited time only 10 Days.</p>
         <ul class="navbar-nav">
             <!-- Light & Dark 
             <li class="nav-item">
@@ -93,7 +93,7 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbar1Label">NeoFlex Hosting</h5>
+                <h5 class="offcanvas-title" id="offcanvasNavbar1Label">skybluenode Hosting</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -102,10 +102,10 @@
                         <a class="nav-link" href="">Get Start For Free</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="games">Game Servers</a>
+                        <a class="nav-link" href="">Game Servers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="minecraft">Minecraft</a>
+                        <a class="nav-link" href="">Minecraft</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -121,10 +121,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="affiliate-program">Affiliate Program</a>
+                        <a class="nav-link" href="">Affiliate Program</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about">About Us</a>
+                        <a class="nav-link" href="">About Us</a>
                     </li>
                                                             <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -235,7 +235,7 @@
                             <span>Real 24/7 Technical Support</span>
                         </li>
                     </ul>
-                    <a href="/games" class="btn">Get Stared Today</a>
+                    <a href="" class="btn">Get Stared Today</a>
                 </div>
             </div>
                         <div class="col-lg-6">
@@ -308,7 +308,7 @@
                             </div>
                             <h2>Game Hosting</h2>
                             <p>Perfect for online gaming, our Game Hosting provides low-latency, high-performance gaming servers.</p>
-                            <a href="games" class="link">
+                            <a href="" class="link">
                                 View More                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="18" height="18">
 <path fill-rule="evenodd" d="M16.72 7.72a.75.75 0 0 1 1.06 0l3.75 3.75a.75.75 0 0 1 0 1.06l-3.75 3.75a.75.75 0 1 1-1.06-1.06l2.47-2.47H3a.75.75 0 0 1 0-1.5h16.19l-2.47-2.47a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
 </svg>                            </a>
