--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/favicon.ico">
     <meta name="theme-color" content="#111520">
     <meta name="author" content="">
-    <meta name="description" content="Experience unparalleled hosting with Neoplex Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations.">
+    <meta name="description" content="Experience unparalleled hosting with Sky Blue Node Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations.">
     <meta name="keywords" content="Neoplex Hosting, game servers, dedicated servers, VPS hosting, domain registration, online gaming, web hosting, server solutions">
     <link href="" rel="canonical">
     <meta name="robots" content="index, follow">
@@ -21,9 +21,9 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:title" content="Sky Blue Node Hosting: Premium Game Servers, Dedicated Servers, VPS">
-    <meta property="og:description" content="Experience unparalleled hosting with Vultric Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
+    <meta property="og:description" content="Experience unparalleled hosting with Sky Blue Node Hosting. Offering top-tier game servers, dedicated servers, VPS, and domain registrations for gamers and businesses seeking reliability and performance.">
     <meta property="og:image" content="img/">
-    <meta property="og:image:alt" content="NeoFlex Hosting">
+    <meta property="og:image:alt" content="Sky Blue Node Hosting">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
